// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"InputLabel" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <label
    css={[Function]}
  >
    Label
  </label>
</div>
`;

exports[`"InputLabel" renders 1`] = `
<div
  css={[Function]}
>
  <label
    css={[Function]}
  >
    Label
  </label>
</div>
`;

exports[`"LabelLink" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <a
    css={[Function]}
  >
    LabelLink
  </a>
</div>
`;

exports[`"LabelLink" renders 1`] = `
<div
  css={[Function]}
>
  <a
    css={[Function]}
  >
    LabelLink
  </a>
</div>
`;
